--- a/trello-cloneui/index.html
+++ b/trello-cloneui/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="icon" href="./images/trello-logo.ico"/>
+  <link rel="icon" type="icon" href="./assets/images/trello-logo.ico"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Courgette:400,700">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
